--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 lz4==4.3.2
 MarkupSafe==2.1.3
-numpy==1.25.2
+numpy
 pandas==2.1.0
 python-dateutil==2.8.2
 requests==2.31.0
