--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,9 @@ jobs:
           SSH_KEY: ${{ secrets.SSH_KEY }}
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
+      - name: Stop previous image
+        run: ssh PROD 'sudo docker stop $(docker ps -q --filter ancestor=${{ env.DOCKER_REGISTRY_REPO }})'
+
       - name: Refresh images
         run: ssh PROD 'sudo docker pull ${{ env.DOCKER_REGISTRY_REPO }}:latest'
 
