--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
           SSH_HOST: ${{ secrets.SSH_HOST }}
 
       - name: Stop previous image
-        run: ssh PROD 'sudo docker stop $(docker ps -q --filter ancestor=${{ env.DOCKER_REGISTRY_REPO }})'
+        run: ssh PROD 'sudo docker stop $(docker ps -q --filter='ancestor=${{ env.DOCKER_REGISTRY_REPO }}')'
 
       - name: Refresh images
         run: ssh PROD 'sudo docker pull ${{ env.DOCKER_REGISTRY_REPO }}:latest'
